--- a/translations/cn.json
+++ b/translations/cn.json
@@ -246,7 +246,7 @@
     },
     "servicesOverview": {
         "title": "我们的软件解决方案",
-        "subtitle": "旨在高效管理并精简仓库运营，同时连接多个第三方物流（3PL）供应商。",
+        "subtitle": "旨在高效管理和优化仓库运营，同时连接多个第三方物流（3PL 和 4PL）服务提供商。",
         "wms": {
             "title": "WMS - 仓储管理系统",
             "description": "完整的仓储管理解决方案，提供实时洞察、50+ 即插即用 ERP/网站系统连接，以及 100% 透明的运营。",
@@ -476,7 +476,7 @@
     "wms": {
         "hero": {
             "title": "仓储管理系统",
-            "subtitle": "旨在高效管理并精简仓库运营，同时连接多个第三方物流（3PL）供应商。",
+            "subtitle": "旨在高效管理和优化仓库运营，同时连接多个第三方物流（3PL 和 4PL）服务提供商。",
             "badges": {
                 "saas": "SAAS WMS",
                 "realtime": "实时洞察",
@@ -531,7 +531,7 @@
             }
         },
         "carrierPlatform": {
-            "title": "电商仓：承运商平台",
+            "title": "MMcore：承载平台",
             "subtitle": "即插即用的标签平台，连接全欧洲主要承运商",
             "features": {
                 "allCarriers": {
