fix(translations): update service overview subtitles for clarity and consistency across multiple languages

--- a/translations/cn.json
+++ b/translations/cn.json
@@ -246,7 +246,7 @@
     },
     "servicesOverview": {
         "title": "我们的软件解决方案",
-        "subtitle": "旨在高效管理和优化仓库运营，同时连接多个第三方物流（3PL 和 4PL）服务提供商。",
+        "subtitle": "从仓储到交付，WMS 和 TMS 优化运营流程，并将您的物流合作伙伴全面连接，实现全程可视化。",
         "wms": {
             "title": "WMS - 仓储管理系统",
             "description": "完整的仓储管理解决方案，提供实时洞察、50+ 即插即用 ERP/网站系统连接，以及 100% 透明的运营。",
