--- a/translations/fr.json
+++ b/translations/fr.json
@@ -246,7 +246,7 @@
   },
   "servicesOverview": {
     "title": "Nos solutions logicielles",
-    "subtitle": "Conçu pour gérer et rationaliser efficacement les opérations d’entrepôt tout en connectant plusieurs prestataires logistiques tiers (3PL et 4PL).",
+    "subtitle": "Du stockage à la livraison, WMS et TMS rationalisent les opérations et connectent vos partenaires logistiques avec une visibilité totale.",
     "wms": {
       "title": "WMS - Warehouse Management System",
       "description": "Solution complète de gestion d’entrepôt avec insights en temps réel, plus de 50 connexions plug & play vers des systèmes ERP/Web, et des opérations 100 % transparentes.",
