--- a/translations/it.json
+++ b/translations/it.json
@@ -246,7 +246,7 @@
     },
     "servicesOverview": {
         "title": "Le nostre soluzioni software",
-        "subtitle": "Progettato per gestire ed ottimizzare in modo efficiente le operazioni di magazzino, collegando al contempo diversi fornitori di logistica di terze parti (3PL e 4PL).",
+        "subtitle": "Dallo stoccaggio alla consegna, WMS e TMS ottimizzano le operazioni e collegano i tuoi partner logistici con piena visibilità.",
         "wms": {
             "title": "WMS - Warehouse Management System",
             "description": "Soluzione completa di gestione magazzino con insight in tempo reale, oltre 50 connessioni plug & play a sistemi ERP/Web e operazioni 100% trasparenti.",
