--- a/translations/nl.json
+++ b/translations/nl.json
@@ -246,7 +246,7 @@
   },
   "servicesOverview": {
     "title": "Onze softwareoplossingen",
-    "subtitle": "Ontworpen om magazijnprocessen efficiënt te beheren en te stroomlijnen, terwijl je meerdere Third‑Party Logistics (3PL en 4PL)‑providers koppelt.",
+    "subtitle": "Van opslag tot levering stroomlijnen WMS en TMS de operaties en verbinden ze uw logistieke partners met volledige zichtbaarheid.",
     "wms": {
       "title": "WMS - Warehouse Management System",
       "description": "Complete magazijnbeheeroplossing met realtime inzichten, 50+ plug‑&‑play koppelingen met ERP/websystemen en 100% transparante operaties.",
