--- a/translations/de.json
+++ b/translations/de.json
@@ -246,7 +246,7 @@
   },
   "servicesOverview": {
     "title": "Unsere Softwarelösungen",
-    "subtitle": "Entwickelt, um Lagerabläufe effizient zu verwalten und zu optimieren und gleichzeitig mehrere Drittanbieter-Logistikdienstleister (3PL und 4PL) zu verbinden.",
+    "subtitle": "Von der Lagerung bis zur Lieferung optimieren WMS und TMS die Abläufe und verbinden Ihre Logistikpartner mit voller Transparenz.",
     "wms": {
       "title": "WMS – Warehouse Management System",
       "description": "Umfassende Lagerverwaltung mit Echtzeit-Insights, 50+ Plug-&-Play-Anbindungen an ERP/Web-Systeme und 100% transparente Abläufe.",
