--- a/translations/en.json
+++ b/translations/en.json
@@ -246,7 +246,7 @@
   },
   "servicesOverview": {
     "title": "Our Software Solutions",
-    "subtitle": "Designed to efficiently manage and streamline warehouse operations while connecting multiple Third-Party Logistics (3PL and 4PL) providers.",
+    "subtitle": "From storage to delivery, WMS and TMS streamline operations and connect your logistics partners with full visibility.",
     "wms": {
       "title": "WMS - Warehouse Management System",
       "description": "Complete warehouse management solution with real-time insights, 50+ plug & play connections to ERP/Web systems, and 100% transparent operations.",
